kubernetes/natrium/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: natrium-server
spec:
  type: ClusterIP
  ports:
  - port: 3002
    targetPort: 3002
    name: api
  selector:
    app: natrium-server
